[metadata]
name = dfp
version = 0.3.0
author = Jay Morgan
author_email = jay@morganwastaken.com
description = A suite of functional tools for all your functional programming
long_description = file: README.md
long_description_type= text/markdown
url = https://github.com/jaypmorgan/dfp

[options]
package_dir =
    = src
install_requires =
    tqdm>=4.62
    pandas==1.*
python_requires = >=3.6

[options.packages.find]
where = src


